# emojify-tg-sticker

./: .env.example  Cargo.toml  README.md
.github/: dependabot.yml
bot/: Cargo.toml
bot/src/: bot_ext.rs  create.rs  delete.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
