[package]
name = "emojify-tg-sticker-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
emojify-tg-sticker = { path = "../lib" }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
dptree = "0.5.1"
env_logger = "0.11.8"
image = "0.25.9"
log = { version = "0.4.29", features = ["std"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
