[package]
name = "emojify-tg-sticker-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
emojify-tg-sticker = { path = "../lib" }
image = "0.25.9"
log = { version = "0.4.29", features = ["std"] }
pretty_env_logger = "0.5.0"
